# xiaozhuai-angle

./: CMakeLists.txt  gen_windows_lib.bat  libEGL.def  libGLESv2.def  norm_ios_dylib.sh  thin_macos_dylib.sh  unofficial-angle-config.cmake.in
lib/ios-arm64/: libEGL.dylib
lib/ios-arm64/libEGL.framework/: Info.plist  libEGL
lib/ios-arm64/libGLESv2.framework/: Info.plist
lib/macos-arm64/: libEGL.dylib
lib/macos-universal/: libEGL.dylib
lib/macos-x64/: libEGL.dylib
lib/windows-x64/: libEGL.lib  libGLESv2.lib
